--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,3 +1,8 @@
 @import "./components/c-login";
+@import "./components/c-modal";
+@import "./components/c-date-picker";
+@import "./components/c-fab";
+
 @import "./screens/s-calendar";
+
 @import "./settings";
